hero page completed

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@
     font-family: "Poppins", serif;
     font-style: normal;
 }
+
+.light-bg{
+    background-color: var(--bggreen);
+    overflow: hidden;
+}
