--- a/src/components/TopBaner.css
+++ b/src/components/TopBaner.css
@@ -3,6 +3,8 @@
     background-color: var(--green);
     min-height: 45px;
     color: var(--white);
+    z-index: 10;
+    position: relative;
 }
 
 .baner-line {
