--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,6 +2,8 @@
     background: #FFFFFF;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
     min-height: 60px;
+    z-index: 10;
+    position: relative;
 }
 
 .header {
@@ -12,9 +14,9 @@
 }
 
 
-.header-links {
+/* .header-links {
 
-}
+} */
 
 .header-links a {
     color: var(--black);
