--- a/src/components/componentsStyle/Hero.css
+++ b/src/components/componentsStyle/Hero.css
@@ -13,7 +13,7 @@
     height: 464px;
     bottom: -35px;
     left: -90px;
-    background-image: url('../img/hero-plant-right.png');
+    background-image: url('../../img/hero-plant-right.png');
 }
 
 .hero::after{
@@ -24,7 +24,7 @@
     max-width: 1043px;
     bottom: 0px;
     right: -90px;
-    background-image: url('../img/hero-plant-left.png');
+    background-image: url('../../img/hero-plant-left.png');
 }
 
 .hero-mid {
