--- a/src/components/componentsStyle/Button.css
+++ b/src/components/componentsStyle/Button.css
@@ -20,7 +20,8 @@
 }
 
 .green-btn {
-    width: 344px;
+    max-width: 344px;
+    width: 100%;
     height: 64px;
     background: var(--green);
     box-shadow: 0px 8px 23px rgba(80, 107, 82, 0.13);
